AB4T-T92 - alignment fix

--- a/src/CreateConsultantComponents/PaymentConfirmation/PaymentConfirmation.css
+++ b/src/CreateConsultantComponents/PaymentConfirmation/PaymentConfirmation.css
@@ -5,7 +5,10 @@
   font-weight: 100;
   padding: 30px;
   letter-spacing: 0.25px;
-  text-align: center;
+  text-align: left;
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
 }
 .pcStepper {
   background: transparent;
@@ -276,6 +279,18 @@
 }
 
 @media only screen and (max-width: 550px) {
+  .whileYouarewaiting {
+    color: #ffffff;
+    font-size: 23px !important;
+    font-family: oswald;
+    font-weight: 100;
+    padding: 30px;
+    letter-spacing: 0.25px;
+    text-align: left;
+    width: 95%;
+    margin-left: auto;
+    margin-right: auto;
+  }
   .mobileStackLeftMargin {
     margin-left: -10px;
   }
@@ -588,4 +603,8 @@
     text-align: center;
     margin: auto;
   }
+}
+
+.paymentConfirmation-Ol {
+  padding-left: 1rem !important;
 }
